@@ -1,3 +1,8 @@
+2010-03-20  Ivan Maidanski <ivmai@mail.ru> (really Dave Korn)
+
+	* tests/staticrootstest.c: New file.
+	* tests/staticrootslib.c: Ditto.
+
 2010-03-19  Ivan Maidanski <ivmai@mail.ru> (really Dave Korn)
 
 	* dyn_load.c (GC_get_next_stack, GC_cond_add_roots): Define for
